Rename operation on collection to list
